# spell-wasm

./: .env.example  .gitignore  Caddyfile  Cargo.toml  DEPLOY-matches.md  DEPLOY.md  Dockerfile  Makefile  NATIVE-LANGUAGE-KIT-PR.md  NOTICES.md  README.md  REVIEW_home_regroup.md  REVIEW_mode_names.md  REVIEW_store_metadata_renames.md  REVIEW_zh_metadata.md  audio-native.js  capacitor.config.json  credits.json  digital-ink.js  docker-compose.audit.yml  docker-compose.yml  index.html  manifest.json  native-language-kit.js  ocr-shim.js  package-lock.json  package.json  privacy.html  rename_audit.md  sw.js
.github/workflows/: css-logical.yml  desktop.yml  e2e.yml  editions.yml  entitlements.yml  modes.yml  release.yml  wordlist-license-gate.yml  wordlists.yml
.well-known/: apple-app-site-association  assetlinks.json
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
archive/keyboards/: it.json  sv.json
archive/locales/: it.json  tr.json
archive/wordlists/: word_data_cut_langs.rs
assets/keyboards/: ar.json  de.json  en.json  es.json  fa.json  fil.json  fr.json  hi.json  ja.json  ko.json  nb.json  nl.json  pl.json  pt.json  ru.json  th.json  tr.json  ur.json  vi.json  zh.json
assets/words/: LICENSES.md
assets/words-draft/: README.md
audit/de/: audio-manifest.txt  auditor-packet.md  findings.json  report.md
audit/difficulty/: README.md
audit/es/: audio-manifest.txt  auditor-packet.md  findings.json  report.md
audit/fil/: audio-manifest.txt  auditor-packet.md  findings.json  report.md
audit/filipino/: AUDIT-CHECKLIST-FILIPINO.md  AUDIT-CHECKLIST-FILIPINO.txt  Caddyfile.audit  DEPLOY-AUDIT-BUILD.md  EMAIL-DRAFT-paul.md  HOW-TO-ACCESS.md  WHAT-APPLE-REQUIRES.md  fil-ui-strings.csv  fil-wordlists.csv
audit/fr/: audio-manifest.txt  auditor-packet.md  findings.json  report.md
audit/it/: audio-manifest.txt  auditor-packet.md  findings.json  report.md
audit/ja/: audio-manifest.txt  auditor-packet.md  findings.json  report.md
audit/ko/: audio-manifest.txt  auditor-packet.md  findings.json  report.md
audit/nb/: audio-manifest.txt  auditor-packet.md  findings.json  report.md
audit/nl/: audio-manifest.txt  auditor-packet.md  findings.json  report.md
audit/pl/: audio-manifest.txt  auditor-packet.md  findings.json  (+1 more)
backend/: Dockerfile  app.py  auth.py  blocklist.txt  climb.py  db.py  entitlements.py  matches.py  requirements.txt  test_climb_season.py  test_entitlements.py  test_matches.py  test_usernames.py  usernames.py
cloudflared/: config.yml
config/: country-language-map.RATIONALE.md  country-language-map.json  modes.json  trap-registry.json
data/: .gitignore  LEXICON.md  LICENSES.md
desktop/: README.md
desktop/src-tauri/: .gitignore  Cargo.toml  entitlements.mas.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
dist-audit/: audio-native.js  sw.js
docs/: AUDITING.md  DECISIONS-PENDING.md  PLAN-new-languages.md  build-56-release-note.md  cjk-input-routing.md  hindi-phase0-status.md  ltr-activation-checklist.md  rtl-branch-reconciliation.md  rtl-keyboard-split.md  rtl-ship-checklist.md  russian-source-options.md  swahili-rules-review.md  word-stories-review.md  writing-mode.md
fastlane/: Appfile  Fastfile  Matchfile
fonts/: OFL.txt
i18n/: REVIEW_NEEDED.md  STRING_AUDIT.md
pkg/: spell_wasm.js  spell_wasm_bg.wasm
proptest-regressions/: entitlements.txt
scripts/: add-play-signing-sha.mjs  add-widget-target.rb  audit-mode-release-check.mjs  build-bigbank.py  build-draft-banks.py  build-draft-wordbanks.py  build-web-audit.sh  build-web-edu.sh  build-web-test.sh  build-web.sh  build-wordlists.py  build-zh-bank.py  bump-version.mjs  check-contrast.mjs  css-logical-check.mjs  daily-pool-audit.py  devanagari-check.mjs  edu-no-purchase-check.mjs  emit-license-table.mjs  entitlement-core-purity-check.mjs  entitlement-map-check.mjs  extract-hanzi-data.mjs  font-selfhost-check.mjs  gen-credits.mjs  i18n-check.mjs  i18n-parity.mjs  ingest-audit-flags.py  ios-setup.sh  kb-layout-check.mjs  license-gate.mjs  modes-check.mjs  promote-rtl.py  provenance-validate.mjs  render-icon-android.mjs  render-icon.mjs  screenshots.mjs  seam-absence-check.mjs  serve-audit.mjs  surface-index.sh  surface_index.py  (+4 more)
sources/: registry.json
src/: achievements.rs  agegate.rs  akshara.rs  api.rs  attempts.rs  audio_boost.rs  audit.rs  board.rs  climb.rs  consts.rs  credits.rs  daily.rs  deck.rs  deeplink.rs  digital_ink.rs  dom.rs  draw_judge.rs  drawing.rs  editor.rs  enrich.rs  entitlements.rs  flags.rs  game.rs  ghost.rs  hangul.rs  haptics.rs  homophones.rs  i18n.rs  importer.rs  jamo.rs  keyboard.rs  kid_filter.rs  lib.rs  mic.rs  misses.rs  model.rs  modes.rs  native_audio.rs  native_lang.rs  norm.rs  (+28 more)
store/: IOS_RUNBOOK.md  RELEASE_CHECKLIST.md  app-review-notes.md  play-data-safety.md  play-listing.md
tests/: README.md  editor_invariants.proptest-regressions  editor_invariants.rs
wordlists/: es.manifest.json  es.provenance.json
(+410 files in other folders)
