[workspace]

[package]
name = "spell_wasm"
version = "0.1.0"
edition = "2021"

[lib]
# rlib in addition to cdylib so integration tests (tests/*.rs) can link the core
# for the editor/mywords property tests; the wasm build still emits the cdylib.
crate-type = ["cdylib", "rlib"]

[features]
# Exposes window.__spelltest (observation-only test seam) for the Playwright
# E2E suite. NEVER enabled in production builds — CI greps the shipped bundle to
# prove its absence (scripts/seam-absence-check.mjs).
testseam = []

# CC-EDITIONS D2 — builds the EDUCATION edition (schools / program buyers)
# instead of the default consumer app. Build-time by design: a runtime edition
# toggle would leave the purchase surface compiled INTO a school's binary and
# merely hide it, which is both a leak risk and an App Review liability.
#
# Selects consts::EDITION = Edition::Education, which turns off every derived
# capability gate (purchases_available, audit_bypass_available,
# leaderboard_available) and adds the education grant to the resolver.
# Ships under a separate bundle ID / distribution artifact.
education = []
# AUDIT PREVIEW — a build that un-gates the ComingSoon languages (ar/fa/ur/ru) and
# loads their unverified DRAFT word banks (assets/words-draft/, CC BY-SA, see its
# README) so native speakers can PLAY and review them. Build-time only, and NEVER
# production: like `testseam`, its absence is the guarantee — with the feature off,
# RTL_SUPPORTED stays false, the languages stay gated, and word_data_audit is not
# compiled in. Produces dist-audit/ via scripts/build-web-audit.sh.
audit_preview = []

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
unicode-normalization = "0.1"
unicode-segmentation = "1"
console_error_panic_hook = "0.1"

[dev-dependencies]
proptest = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window", "Navigator", "Document", "Element", "HtmlElement", "Node", "NodeList", "DomTokenList",
  "HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement", "HtmlButtonElement",
  "HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlMediaElement", "HtmlAudioElement",
  "Event", "EventTarget", "MouseEvent", "PointerEvent", "KeyboardEvent", "InputEvent",
  "Storage",
  "Request", "RequestInit", "RequestMode", "Response", "Headers",
  "SpeechSynthesis", "SpeechSynthesisUtterance", "SpeechSynthesisVoice", "SpeechSynthesisEvent",
  "DomParser", "SupportedType",
  "CssStyleDeclaration",
  "DomRect",
  "Performance",
  "AudioContext", "AudioContextState", "GainNode", "AudioNode", "AudioParam", "MediaElementAudioSourceNode",
  "AudioDestinationNode",
]

[profile.release]
opt-level = "s"
lto = true
